<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16sp"
    android:layout_marginTop="16sp"
    android:layout_marginRight="16sp"
    tools:context=".login">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginImage"
        android:gravity="center"
        android:text="@string/Electronics"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="30sp"
        android:hint="Email"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:hint="@string/hint_password"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:button="@drawable/ic_checkbox_selector"
        android:paddingStart="5dp"
        android:text="@string/remember_me"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/forgetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:background="#00000000"
        android:gravity="right"
        android:text="@string/forget_ps"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetBtn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_custom_button"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/ic_transparent_btn"
        android:text="@string/google_signin"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/googleBtn"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/reg_btn_txt"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/superBtn"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regBtn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_transparent_btn"
        android:text="@string/text_super"
        android:textColor="@color/black" />


</RelativeLayout>