<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".adminPenal.edit_Product">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="50dp"
        android:background="@color/ofWhite"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3sp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/products"
            android:textColor="@color/orange_500"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_transparent_btn"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_product_name"
                android:textColor="@color/orange_500"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/updateProdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/enter_name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_transparent_btn"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_product_price"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/updateProdPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFF"
                android:hint="@string/enter_price"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_transparent_btn"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/description"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/updateProdDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:background="@drawable/ic_custom_button"
                android:text="@string/update" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ic_custom_button"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>