<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Messages">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_light"
        android:padding="5dp"
        android:text="@string/messages_header"
        android:textColor="#444"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/messageBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_custom_button"
            android:text="@string/txt_chat"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/notificationsBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_transparent_btn"
            android:text="@string/txt_notifications"
            android:textColor="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/messageFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"/>


</LinearLayout>