<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.buyNow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000ff"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginStart="6dp"
                android:layout_toRightOf="@+id/backBtn"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/txt_checkout"
                android:textColor="#444"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#fff"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/nameBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ic_transparent_btn"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#fff"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phoneBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ic_transparent_btn"
                android:hint="@string/ph_no"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#fff"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/emailBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ic_transparent_btn"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#fff"
                android:src="@drawable/ic_home_address" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ic_transparent_btn"
                android:gravity="center_vertical"
                android:hint="@string/txt_address"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/productImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="40dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/productName12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_product_name"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/msgBtn"
            android:background="#FFF8F1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_vertical|right"
                android:paddingStart="15dp"
                android:text="Total Amount Rs:"
                android:textColor="@color/orange_500"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingStart="7dp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="price"
                android:textColor="@color/red"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/msgBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_custom_button"
            android:text="Pay Now" />


    </RelativeLayout>

</RelativeLayout>